--- a/Modbus_Programmer/Modbus_Programmer.csproj
+++ b/Modbus_Programmer/Modbus_Programmer.csproj
@@ -81,6 +81,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Rs485.cs" />
     <Compile Include="SerialPort.cs">
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
