--- a/Modbus_Programmer/Modbus_Programmer.csproj
+++ b/Modbus_Programmer/Modbus_Programmer.csproj
@@ -68,6 +68,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CliDisputant.cs" />
+    <Compile Include="CliPort.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
